fixed issue with white space above banner when resizing

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,16 @@
 @import "./fonts/font.css";
 
+body {
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
 #root {
   margin: 0 auto;
   padding: 0;
   text-align: center;
   width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
